--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
+    "markdownlint.config": {
+        "MD007": { "indent": 4}
+    },
     "cSpell.words": [
+        "defaultdict",
         "heapify",
         "Kruskal",
         "nexts",
